my-validating-webhook/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: validate-webhook
spec:
  selector:
    app: validate-webhook
  ports:
    - protocol: TCP
      port: 8443
      targetPort: 8443
  type: ClusterIP
