my-validating-webhook/manifests/admissionwebhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: my-validating-webhook 
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURqakNDQW5hZ0F3SUJBZ0lVUGMrZzl0cGZWTVFObkNKcW84bnlQeG9ZQ0NRd0RRWUpLb1pJaHZjTkFRRUwKQlFBd1FqRUxNQWtHQTFVRUJoTUNWRkl4RlRBVEJnTlZCQWNNREVSbFptRjFiSFFnUTJsMGVURWNNQm9HQTFVRQpDZ3dUUkdWbVlYVnNkQ0JEYjIxd1lXNTVJRXgwWkRBZUZ3MHlNekEwTVRReU1qUTFNemxhRncweU5qQXlNREV5Ck1qUTFNemxhTUVJeEN6QUpCZ05WQkFZVEFsUlNNUlV3RXdZRFZRUUhEQXhFWldaaGRXeDBJRU5wZEhreEhEQWEKQmdOVkJBb01FMFJsWm1GMWJIUWdRMjl0Y0dGdWVTQk1kR1F3Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQgpEd0F3Z2dFS0FvSU [...]
    service:
      name: validate-webhook 
      namespace: default
      path: /validate
      port: 8443  
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: validate-webhook.default.svc.cluster.local 
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - deployments 
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
